# portfolio-website

./: LICENSE  Readme.md
portfolio website/: .gitignore
portfolio website/backend/: .env  .env.example  Cargo.toml  Dockerfile
portfolio website/backend/.sqlx/: query-62e592a7604ddee5cc81811bcaf9458bbca192a633c775e1a7833554a775bce5.json  query-c912774202174c74d63d17ea9170b7a37b35aac87bd4b60a02101e14dfc2d694.json
portfolio website/backend/migrations/: 001_init.sql
portfolio website/backend/src/: config.rs  main.rs
portfolio website/backend/src/handlers/: admin.rs  auth.rs  mod.rs  public.rs
portfolio website/backend/src/middleware/: auth.rs
portfolio website/backend/src/models/: project.rs  user.rs
portfolio website/frontend/: package-lock.json
portfolio website/frontend/src/app/: page.tsx
portfolio website/frontend/src/app/admin/dashboard/: page.tsx
portfolio website/frontend/src/app/admin/login/: page.tsx
portfolio website/frontend/src/app/projects/[id]/: page.tsx
portfolio website/frontend/src/components/: navbar.tsx
